More dark mode bugfixes
- Fix usage of deprecated sass options.
- Make the screen not flash white on load.
- Fix color inputs having dark mode when in light mode

--- a/src/views/settings/Settings.sass
+++ b/src/views/settings/Settings.sass
@@ -146,8 +146,11 @@ $scrollbar-thumb-hover-dark: #555555
 
     input[type=color]
         display: block
-        background-color: #313738
-        border: 1px solid #2b2d2f
+        border: 1px solid #bdc3c7
+
+        .dark &
+            background-color: #313738
+            border: 1px solid #2b2d2f
 
     .button
         border: 0
